# INGInious-regex-feedback-match-problem

./: README.md  pyproject.toml
docs/: README.md
src/inginious_regex_feedback_match_problem/: __init__.py
src/inginious_regex_feedback_match_problem/static/js/: studio.js  task.js
src/inginious_regex_feedback_match_problem/templates/course_admin/subproblems/: regex_feedback_match.html  regex_feedback_match_templates.html
